# geosync

./: .gitignore  LICENSE  README.md  environment.yml  readme.md  run_crew.py
api/: Cargo.toml
api/src/: main.rs
fine-tuning/: export_model_dynamic_images.py  main_fine_tuning.py  requirements_fine_tuning.txt
frontend/: package-lock.json
frontend/src/: App.tsx  main.tsx
geosync/: docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
geosync/src/geosync/: crew.py  main.py
geosync/src/geosync/config/: agents.yaml  agents.yaml.bak  tasks.yaml
geosync/src/geosync/tools/: earthengine_tool.py  geocoding_tool.py  image_difference_analyzer_tool.py  urban_analysis_tool.py
geosync/tests/: test_earthengine_tooll.py  test_image_difference_analyzer_tool.py  test_urban_analysis_tool.py
src/geosync/: crew.py  main.py
src/geosync/config/: agents.yaml  tasks.yaml  tasks.yaml.bak
src/geosync/tools/: earthengine_tool.py  geocoding_tool.py  image_difference_analyzer_tool.py
tests/: test_image_difference_analyzer_tool.py
