[project]
name = "geosync"
version = "0.1.0"
description = "geosync using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    
]

[project.scripts]
geosync = "geosync.main:run"
run_crew = "geosync.main:run"
train = "geosync.main:train"
replay = "geosync.main:replay"
test = "geosync.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
